--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,36 +1,25 @@
 {% extends 'base.html' %}
-{% block title %} 
-<meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
-    <link rel="icon" href="img/fav/fav.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
-  <!--  <link rel="stylesheet" href="% static 'css/bootstrap.min.css' %}"> -->
-   <!--<img src="% static 'img/logo.png' %}">-->
+{% load static %}
+{% block title %}
     <title>Последние обновления на сайте</title>
 {% endblock %}
 {% block content %}
-<h1>{{ text }}</h1>
-<a class="navbar-brand" href="{% url 'posts:posts_string' %}">
-  Анфиса для друзей
-</a>
+    <h1>Последние обновления на сайте</h1>
 {% for post in posts %}
-  <ul>
-    <li>
+<ul>
+   <li>
       Автор: {{ post.author.get_full_name }}
-    </li>
-    <li>
+   </li>
+   <li>
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
-    </li>
-  </ul>
-  <p>{{ post.text }}</p>
-  <a href="">все записи группы</a>
-  {% if not forloop.last %}<hr>{% endif %}
+   </li>
+</ul>
+<p>{{ post.text }}</p>
+{% if post.group %}
+  <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+{% endif %}
+{% if not forloop.last %}
+<hr>
+{% endif %}
 {% endfor %}
 {% endblock %}
