текст коÐСÐпринт 3. Финал.

--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block title %}
-<title>Лев Толстой – зеркало русской революции.</title>
+Лев Толстой – зеркало русской революции.
 {% endblock %}
 
 {% block content %}
+<h1>{{ group.title }}</h1>
+<p>{{ group.description }}</p>
+<article>
 {% for post in posts %}
-
 <ul>
    <li>
       Автор: {{ post.author.get_full_name }}
@@ -14,10 +16,10 @@
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
    </li>
 </ul>
-<p>{{ post.text }}</p>
-
+<p>{{ post.text|linebreaksbr }}</p>
+</article>
 {% if not forloop.last %}
 <hr>
 {% endif %}
-   {% endfor %}
+{% endfor %}
 {% endblock %}
