--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,24 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}
-Лев Толстой – зеркало русской революции.
+{{ group.title }}
 {% endblock %}
 
 {% block content %}
 <h1>{{ group.title }}</h1>
 <p>{{ group.description }}</p>
-<article>
 {% for post in posts %}
-<ul>
-   <li>
-      Автор: {{ post.author.get_full_name }}
-   </li>
-   <li>
-      Дата публикации: {{ post.pub_date|date:"d E Y" }}
-   </li>
-</ul>
+<article>
+   <ul>
+      <li>
+         Автор: {{ post.author.get_full_name }}
+      </li>
+      <li>
+         Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+   </ul>
 <p>{{ post.text|linebreaksbr }}</p>
-</article>
 {% if not forloop.last %}
+</article>
 <hr>
 {% endif %}
 {% endfor %}
