--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,7 +3,7 @@
 Последние обновления на сайте
 {% endblock %}
 {% block content %}
-    <h1>Последние обновления на сайте</h1>
+<h1>Последние обновления на сайте</h1>
 {% for post in posts %}
 <article>
    <ul>
@@ -14,7 +14,7 @@
          Дата публикации: {{ post.pub_date|date:"d E Y" }}
       </li>
    </ul>
-<p>{{ post.text }}</p>
+<p>{{ post.text|linebreaksbr }}</p>
 </article>
 {% if post.group %}
 <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
