--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -11,10 +11,13 @@
       <meta name="msapplication-TileColor" content="#000">
       <meta name="theme-color" content="#ffffff">
       <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+      <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
       <title>
       {% block title %}
       {% endblock %}
       </title>
+
+
    </head>
    <body>
       <header>
