--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,10 +1,8 @@
-{% extends 'base.html' %}
-{% block title %}
-Последние обновления на сайте
-{% endblock %}
+{% extends "base.html" %}
+{% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
 <h1>Последние обновления на сайте</h1>
-{% for post in posts %}
+{% for post in page_obj.object_list %}
 <article>
    <ul>
       <li>
@@ -23,4 +21,6 @@
 <hr>
 {% endif %}
 {% endfor %}
-{% endblock %}
+  {% include 'posts/includes/paginator.html' %}
+
+{% endblock %} 
