--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -16,7 +16,7 @@
         </li>
         {% if  request.user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="">Новая запись</a>
+          <a class="nav-link {% if view_name  == 'posts:post_create' %}active{% endif %}" href="{% url 'posts:post_create' %}">Новая запись</a>
         </li>
         <li class="nav-item">
           <a class="nav-link link-light {% if view_name  == 'users:password_change' %}active{% endif %}" href="{% url 'users:password_change' %}">Изменить пароль</a>
